[package]
name = "bvh-viz"
version = "0.1.0"
authors = ["Gobrosse <hugo@xol.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.17.0"
#lz4 = "1.23.1"
compress = "0.1.2"
minifb = "0.12"
either = "1.5.2"
byteorder = "1.3.2"