[package]
name = "bvh-viz"
version = "0.1.0"
authors = ["Gobrosse <hugo@xol.io>"]
edition = "2018"

[dependencies]
cgmath = "0.17.0"
#lz4 = "1.23.1"
compress = "0.1.2"
minifb = "0.12"
either = "1.5.2"
byteorder = "1.3.2"
typed-arena = "1.4.1"
rayon = "1.1.0"

[profile.release]
opt-level = 3
panic = "abort"
lto = true
codegen-units = 1
debug=true